#14225 closed bug (fixed)
Partition gets wrong mount point after reboot
Reported by: | KapiX | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta1 |
Component: | Servers/mount_server | Version: | R1/Development |
Keywords: | Cc: | jessicah | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
I have a "Data" partition, that gets mounted under "/Dat" after boot. Desktop shows the name correctly, DriveSetup does as well, and if I unmount and mount it again, it gets mounted under "/Data".
I'm guessing automount changes broke this because I have never seen this before and it appeared after an update.
Attachments (1)
Change History (9)
by , 7 years ago
Attachment: | screenshot1.png added |
---|
comment:1 by , 7 years ago
Milestone: | Unscheduled → R1/beta1 |
---|---|
Owner: | changed from | to
Status: | new → assigned |
comment:2 by , 7 years ago
comment:3 by , 7 years ago
Cc: | added |
---|
comment:4 by , 7 years ago
It's likely that one of the recent user_strlcpy() fixes is causing that issue (there is probably one byte copied less now). Could you tell which file system your "Data" partition uses?
comment:5 by , 7 years ago
If you could test with an an older mountserver just before the changes on a new hrev, that would be helpful. That way we could just revert the patch in the beta branch if needed.
comment:6 by , 7 years ago
I will check. I have also upgraded my GCC2h install and I don't see that happening (on the same machine, Data being shared partition). The filesystem is BFS.
comment:7 by , 7 years ago
Oh. Someone mentioned that this may have been caused by the GCC upgrade; it would be very interesting (and probably a nightmare to track down) if that's the case. Could you try with one rev after / one rev before that?
comment:8 by , 7 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
I didn't manage to find the culprit myself, all I can tell is the name is saved correctly in settings (using message to inspect).