kernel: vm: fix off-by-one errors in get_mount_point

* Fix for 03df8bfcf2b58bf114cf876eccdd5242448926ce.
* Fix misleading indentation.
* Fixes #14225.